// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionView should render the QuestionView component, question details and answers 1`] = `
<div
  id="questionView"
>
  <a
    className="link back"
    onClick={[Function]}
  >
    <i
      className="fas fa-chevron-circle-left blue"
    />
     Back
  </a>
  <div
    className="title-large"
  >
    Question number 1 from the Quiz 1 quiz
  </div>
  <div
    className="detailsContainer"
  >
    <div
      className="detailsHeading"
    >
      Question description:
    </div>
    <div
      className="detailsContent"
    >
      Test question
    </div>
  </div>
  <div
    className="headerContainer"
  >
    <div
      id="answersTitle"
    >
      Answers
    </div>
    <a
      className="addButton"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus-circle green"
      />
       Add an answer
    </a>
  </div>
  <div
    id="answerHeadings"
  >
    <div
      id="numberHeader"
    >
      Answer
    </div>
    <div
      id="descriptionHeader"
    >
      Description
    </div>
    <div
      id="correctAnswerHeading"
    >
      Correct answer?
    </div>
    <div
      id="optionsHeader"
    />
  </div>
  <div
    id="answers"
  >
    <div>
      <div>
        <div
          className="answerContainer"
        >
          <div
            className="ansNumber"
          >
            1
          </div>
          <div
            className="ansDecription"
          >
            Test answer
          </div>
          <div
            className="correctAns"
          >
            <i
              className="far fa-times-circle red"
            />
          </div>
          <div
            className="options"
          >
            <a
              className="deleteOption"
              onClick={[Function]}
            >
              <i
                className="fas fa-trash-alt red"
              />
               Delete
            </a>
            <a
              className="edit"
              onClick={[Function]}
            >
              <i
                className="fas fa-edit blue"
              />
               Edit
            </a>
          </div>
        </div>
      </div>
      <div>
        <div
          className="answerContainer"
        >
          <div
            className="ansNumber"
          >
            2
          </div>
          <div
            className="ansDecription"
          >
            Test answer2
          </div>
          <div
            className="correctAns"
          >
            <i
              className="far fa-check-circle green"
            />
          </div>
          <div
            className="options"
          >
            <a
              className="deleteOption"
              onClick={[Function]}
            >
              <i
                className="fas fa-trash-alt red"
              />
               Delete
            </a>
            <a
              className="edit"
              onClick={[Function]}
            >
              <i
                className="fas fa-edit blue"
              />
               Edit
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionView should render the QuestionView component, update question form and no answers if the answers array is empty 1`] = `
<div
  id="questionView"
>
  <a
    className="link back"
    onClick={[Function]}
  >
    <i
      className="fas fa-chevron-circle-left blue"
    />
     Back
  </a>
  <div
    className="title-large"
  >
    Question number 1 from the Quiz 1 quiz
  </div>
  <div
    className="detailsContainer"
  >
    <div
      className="detailsHeading"
    >
      Question description:
    </div>
    <div
      className="detailsContent"
    >
      Test question
    </div>
  </div>
  <div
    className="headerContainer"
  >
    <div
      id="answersTitle"
    >
      Answers
    </div>
    <a
      className="addButton"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus-circle green"
      />
       Add an answer
    </a>
  </div>
  <div
    id="answerHeadings"
  >
    <div
      id="numberHeader"
    >
      Answer
    </div>
    <div
      id="descriptionHeader"
    >
      Description
    </div>
    <div
      id="correctAnswerHeading"
    >
      Correct answer?
    </div>
    <div
      id="optionsHeader"
    />
  </div>
  <div
    id="answers"
  />
</div>
`;
